--- a/Estilos/EstilosHome.css
+++ b/Estilos/EstilosHome.css
@@ -7,7 +7,15 @@
 header{
     box-sizing: border-box;
     display: flex;
-    border-bottom: 1em solid black;
+    border-bottom: 0.5em solid black;
     width: 100vw;
     height: 15vh;
+}
+main{
+    width: 100vw;
+    height: 85vh;
+}
+main iframe{
+    width: 100%;
+    height: 100%;
 }
