--- a/Estilos/EstilosHome.css
+++ b/Estilos/EstilosHome.css
@@ -5,6 +5,7 @@
     color: black;
 }
 header{
+    background-color: #fff600;
     box-sizing: border-box;
     display: flex;
     justify-content: space-between;
@@ -25,9 +26,9 @@ header .menu{
     display: flex;
 }
 header .menu a{
-    padding: 1.5em .5em;
-    margin: .5em;
-    background-color: blue;
+    padding: 1em .5em;
+    margin: 1em .5em;
+    background-color: #ffbe0f;
     box-sizing: border-box;
     border: 1px solid black;
     text-decoration: none;
