--- a/Estilos/EstilosP2.css
+++ b/Estilos/EstilosP2.css
@@ -30,3 +30,10 @@ header{
     background-color: chocolate;
     border-left: .5em solid black;
 }
+footer{
+    box-sizing: border-box;
+    border-top: .5em solid black;
+    background-color: chocolate;
+    width: 100vw;
+    height: 15vh;
+}
