--- a/Estilos/EstilosP5.css
+++ b/Estilos/EstilosP5.css
@@ -3,3 +3,22 @@
     padding: 0;
     font-family: Arial;
 }
+header{
+    width: 100vw;
+    height: 15vh;
+    box-sizing: border-box;
+    border-bottom: .5em solid black;
+    background-color: aqua;
+
+}
+.subheader{
+    width: 100vw;
+    height: 10vh;
+    box-sizing: border-box;
+    border-bottom: .5em solid black;
+    background-color: aqua;
+}
+.container-flex{
+    height: 70vh;
+    display: flex;
+}
