--- a/Estilos/EstilosP5.css
+++ b/Estilos/EstilosP5.css
@@ -9,7 +9,6 @@ header{
     box-sizing: border-box;
     border-bottom: .5em solid black;
     background-color: aqua;
-
 }
 .subheader{
     width: 100vw;
@@ -23,14 +22,26 @@ header{
     display: flex;
     flex-direction: row;
 }
-.container-left{
-    width: 25vw;
+.container-left, .container-rigth{
+    width: 20vw;
     display: flex;
     flex-direction: column;
 }
-.container-left div{
+.container-left div, .container-rigth div{
     width: 100%;
-    height: 75%;
+    height: 45%;
     box-sizing: border-box;
     border: .5em solid black;
+}
+.container-center{
+    width: 60vw;
+    background-color: aqua;
+    box-sizing: border-box;
+    border: .5em solid black;
+}
+footer{
+    width: 100vw;
+    height: 5vh;
+    box-sizing: border-box;
+    border-top: .5em solid black;
 }
