--- a/Estilos/EstilosP6.css
+++ b/Estilos/EstilosP6.css
@@ -18,3 +18,10 @@
 .container-rigth{
  width: 75vw;   
 }
+.container-rigth header{
+    width: 100%;
+    height: 10%;
+    box-sizing: border-box;
+    border-bottom: .5em solid black;
+    background-color: brown;
+}
