--- a/Estilos/EstilosP6.css
+++ b/Estilos/EstilosP6.css
@@ -25,3 +25,16 @@
     border-bottom: .5em solid black;
     background-color: brown;
 }
+.container-flexjr{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 80%;
+}
+.container-flexjr div{
+    box-sizing: border-box;
+    border-right: .5em solid black;
+    width: 50%;
+    height: 100%;
+    background-color: brown;
+}
