--- a/Estilos/EstilosP6.css
+++ b/Estilos/EstilosP6.css
@@ -38,3 +38,10 @@
     height: 100%;
     background-color: brown;
 }
+footer{
+    width: 100%;
+    height: 10%;
+    box-sizing: border-box;
+    border-top: .5em solid black;
+    background-color: brown;
+}
