--- a/Estilos/EstilosP7.css
+++ b/Estilos/EstilosP7.css
@@ -3,3 +3,11 @@
     padding: 0;
     font-family: Arial;
 }
+header{
+    width: 100vw;
+    height: 10vh;
+    box-sizing: border-box;
+    border-bottom: .5em solid black;
+    background-color: red;
+    
+}
