Declaro como flex container-flex

--- a/Estilos/EstilosP7.css
+++ b/Estilos/EstilosP7.css
@@ -17,3 +17,8 @@ section{
     border-bottom: .5em solid black;
     background-color: red;
 }
+.container-flex{
+    display: flex;
+    flex-direction: row;
+    margin: 1em;
+}
