--- a/Estilos/EstilosP7.css
+++ b/Estilos/EstilosP7.css
@@ -18,7 +18,15 @@ section{
     background-color: red;
 }
 .container-flex{
+    width: 100vw;
+    height: 30vh;
     display: flex;
     flex-direction: row;
     margin: 1em;
+}
+.container-flex div{
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    border: .5em solid black;
 }
