--- a/Estilos/EstilosP7.css
+++ b/Estilos/EstilosP7.css
@@ -13,8 +13,6 @@ header{
 section{
     width: 100vw;
     height: 50vh;
-    box-sizing: border-box;
-    border-bottom: .5em solid black;
     background-color: red;
 }
 .container-flex{
@@ -22,11 +20,16 @@ section{
     height: 30vh;
     display: flex;
     flex-direction: row;
-    margin: 1em;
 }
 .container-flex div{
     width: 100%;
     height: 100%;
     box-sizing: border-box;
     border: .5em solid black;
+    background-color: red;
+}
+footer{
+    width: 100vw;
+    height: 10vh;
+    background-color: red;
 }
