--- a/Estilos/EstilosP8.css
+++ b/Estilos/EstilosP8.css
@@ -3,3 +3,13 @@
     padding: 0;
     font-family: Arial;
 }
+header{
+    width: 100vw;
+    height: 15vh;
+    box-sizing: border-box;
+    border-bottom: .5em solid black;
+}
+main{
+    display: flex;
+    flex-direction: row;
+}
