--- a/Estilos/EstilosP8.css
+++ b/Estilos/EstilosP8.css
@@ -6,8 +6,6 @@
 header{
     width: 100vw;
     height: 15vh;
-    box-sizing: border-box;
-    border-bottom: .5em solid black;
     background-color: gold;
 }
 main{
@@ -21,5 +19,19 @@ main{
     height: 100%;
     background-color: gold;
     box-sizing: border-box;
-    border-bottom: .5em solid black;
+    border-bottom: .5em solid black;    
+    border-top: .5em solid black;
+}
+.container-center{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+.container-center div{
+    box-sizing: border-box;
+    background-color: gold;
+    width: 100%;
+    height: 100%;
+    border: .5em solid black;
 }
