--- a/Estilos/EstilosP2.css
+++ b/Estilos/EstilosP2.css
@@ -7,7 +7,7 @@ header{
     width: 100vw;
     height: 15vh;
     box-sizing: border-box;
-    background-color: chocolate;
+    background-color: #1f441e;
     border-bottom: .5em solid black;
 }
 .container-flex{
@@ -16,24 +16,24 @@ header{
 }
 .container-left{
     width: 25vw;
-    background-color: chocolate;
+    background-color: #cee6b4;
     box-sizing: border-box;
     border-right: .5em solid black;
 }
 .container-center{
     width: 50vw;
-    background-color: chocolate;
+    background-color: #cee6b4;
 }
 .container-rigth{
     width: 25vw;
     box-sizing: border-box;
-    background-color: chocolate;
+    background-color: #cee6b4;
     border-left: .5em solid black;
 }
 footer{
     box-sizing: border-box;
     border-top: .5em solid black;
-    background-color: chocolate;
+    background-color: #1f441e;
     width: 100vw;
     height: 15vh;
 }
