--- a/Estilos/EstilosP2.css
+++ b/Estilos/EstilosP2.css
@@ -4,6 +4,7 @@
     font-family: Arial;
 }
 header{
+    text-align: center;
     width: 100vw;
     height: 15vh;
     box-sizing: border-box;
@@ -23,6 +24,14 @@ header{
 .container-center{
     width: 50vw;
     background-color: #cee6b4;
+}
+.container-center img{
+    width: 100%;
+    height: 100%;
+}
+.container-rigth img{
+    width: 100%;
+    height: 90%;
 }
 .container-rigth{
     width: 25vw;
