--- a/Estilos/EstilosP4.css
+++ b/Estilos/EstilosP4.css
@@ -5,27 +5,35 @@
 }
 header{
     width: 100vw;
-    height: 15vh;
+    height: 10vh;
     box-sizing: border-box;
     border-bottom: .5em solid black;
     background-color: #845ec2;
 }
+header h1{
+    text-align: center;
+    padding: 1,5em;
+}
 main{
-    height: 85vh;
+    height: 90vh;
     display: flex;
 }
+
 .container-left , .container-rigth{
+    font-size: 13px;
     width: 20vw;
     display: flex;
     flex-direction: column;
 }
+
 .container-left div,.container-rigth div{
     background-color: #ffc75f;
     box-sizing: border-box;
     border: .5em solid black;
     width: 100%;
-    height: 100%;
+    height: 30vh;
 }
+
 .container-center{
     width: 60vw;
     background-color: #ffc75f;
