--- a/Estilos/EstilosP4.css
+++ b/Estilos/EstilosP4.css
@@ -25,6 +25,10 @@ main{
     display: flex;
     flex-direction: column;
 }
+.container-center img{
+    width: 100%;
+    height: 50%;
+}
 
 .container-left div,.container-rigth div{
     background-color: #ffc75f;
