--- a/Estilos/EstilosP5.css
+++ b/Estilos/EstilosP5.css
@@ -31,16 +31,20 @@ header{
     display: flex;
     flex-direction: column;
 }
+.container-left div img,.container-rigth div img{
+    width: 100%;
+    height: 100%;
+}
 .container-left div, .container-rigth div{
     width: 100%;
     height: 45%;
     box-sizing: border-box;
     border: .5em solid black;
-    background-color: aqua;
+    background-color: #e8ffc1;
 }
 .container-center{
     width: 60vw;
-    background-color: aqua;
+    background-color: #e8ffc1;
     box-sizing: border-box;
     border: .5em solid black;
 }
