--- a/Estilos/EstilosP6.css
+++ b/Estilos/EstilosP6.css
@@ -10,10 +10,11 @@
     height: 100vh;
 }
 .container-left{
+    padding: 1em;
     width: 25vw;
     box-sizing: border-box;
     border-right: .5em solid black;
-    background-color: brown;
+    background-color: #f6ce59;
 }
 .container-rigth{
  width: 75vw;   
@@ -23,7 +24,7 @@
     height: 10%;
     box-sizing: border-box;
     border-bottom: .5em solid black;
-    background-color: brown;
+    background-color: #f6ce59;
 }
 .container-flexjr{
     display: flex;
@@ -36,12 +37,21 @@
     border-right: .5em solid black;
     width: 50%;
     height: 100%;
-    background-color: brown;
+    background-color: #f3ff92;
+}
+.container-flexjr div img{
+    width: 100%;
+    height: 100%;
 }
 footer{
     width: 100%;
     height: 10%;
     box-sizing: border-box;
     border-top: .5em solid black;
-    background-color: brown;
+    background-color: #f6ce59;
+    text-align: center;
+}
+footer img{
+    width: 20%;
+    height: 100%;
 }
