--- a/Estilos/EstilosP7.css
+++ b/Estilos/EstilosP7.css
@@ -4,16 +4,20 @@
     font-family: Arial;
 }
 header{
+    text-align: center;
     width: 100vw;
     height: 10vh;
     box-sizing: border-box;
     border-bottom: .5em solid black;
-    background-color: red;
+    background-color: #3a6351;
 }
 section{
     width: 100vw;
     height: 50vh;
-    background-color: red;
+}
+section img{
+    width: 100%;
+    height: 100%;
 }
 .container-flex{
     width: 100vw;
@@ -26,10 +30,10 @@ section{
     height: 100%;
     box-sizing: border-box;
     border: .5em solid black;
-    background-color: red;
+    background-color: #f2edd7;
 }
 footer{
     width: 100vw;
     height: 10vh;
-    background-color: red;
+    background-color: #ac0d0d;
 }
