--- a/Estilos/EstilosP8.css
+++ b/Estilos/EstilosP8.css
@@ -6,7 +6,7 @@
 header{
     width: 100vw;
     height: 15vh;
-    background-color: gold;
+    background-color: #0E1E5B;
 }
 main{
     display: flex;
@@ -17,21 +17,34 @@ main{
 .container-left, .container-rigth{
     width: 25vw;
     height: 100%;
-    background-color: gold;
     box-sizing: border-box;
     border-bottom: .5em solid black;    
     border-top: .5em solid black;
 }
+.container-left  img, .container-rigth  img{
+    height: 100%;
+    width: 100%;
+}
 .container-center{
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 50vw;
     height: 100%;
 }
 .container-center div{
     box-sizing: border-box;
-    background-color: gold;
+    background-color: #3562A6;
     width: 100%;
     height: 100%;
     border: .5em solid black;
+}
+.partido{
+    display: flex;
+    justify-content: center;
+    padding: .3em;
+}
+.partido  img{
+    padding: .3em;
+    width: 5vw;
+    height: 5vh;
 }
